--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
         <title>Докопатыч</title>
         <meta
             name="description"
-            content="Бот поможет подобрать фильм по вашему вкусу. Быстро и бесплатно в Telegram."
+            content="Бот для быстрого подбора фильмов и сериалов. In memory of Jeff Baena."
         />
  
 
         <!-- Favicon -->
-        <link rel="icon" type="image/png" href="images/round.png" />
+        <link rel="icon" type="image/png" href="images/round-sm.png" />
 
         <!-- Стили -->
         <link rel="stylesheet" href="styles.css" /> 
@@ -24,7 +24,7 @@
         <div class="table">
             <div class="column">
                 <div class="botCard">
-                    <img src="./images/round.png" alt="Аватар" class="avatar" />
+                    <img src="./images/round-sm.png" alt="Аватар" class="avatar" />
                     <span class="name">Докопатыч</span>
                     <span class="username">@DokopatychBot</span>
                     <span class="description"
