--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
                 <div class="carousel">
                     <span id="carousel-text"
-                        >Вспоминаешь, какой фильм/сериал стал для тебя родным
+                        >Ищешь что посмотреть
                     </span>
                 </div>
             </div> 
