--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <meta property="og:title" content="Докопатыч" />
 <meta property="og:description" content="Бот для быстрого подбора фильмов и сериалов. In memory of Jeff Baena." />
-<meta property="og:image" content="https://dokopatych.github.io/botpage/images/round-sm.png" />
+<meta property="og:image" content="https://dokopatych.github.io/botpage/images/qr.png" />
 <meta property="og:url" content="https://dokopatych.github.io/botpage" />
 <meta property="og:type" content="website" />
 
