--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </span>
 
                     <div class="btns-container">
-                        <a href="https://t.me/DokopatychBot" class="start-btn" target="_blank">
+                        <a href="https://web.telegram.org/k/#@DokopatychBot" class="start-btn" target="_blank">
                             WEB
                         </a>
                         <a href="tg://resolve?domain=DokopatychBot" class="start-btn"> DESKTOP </a>
@@ -55,7 +55,7 @@
 
                 <div class="carousel">
                     <span id="carousel-text"
-                        >Ищешь что посмотреть
+                        >Ищешь, что посмотреть
                     </span>
                 </div>
             </div> 
