--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 
         <meta property="og:title" content="Докопатыч" />
 <meta property="og:description" content="Бот для быстрого подбора фильмов и сериалов. In memory of Jeff Baena." />
-<meta property="og:image" content="https://dokopatych.github.io/botpage/images/qr.png" />
-<meta property="og:url" content="https://dokopatych.github.io/botpage" />
+<meta property="og:image" content="https://dokopatych.github.io/movie-bot-start/images/qr.webp" />
+<meta property="og:url" content="https://dokopatych.github.io/movie-bot-start" />
 <meta property="og:type" content="website" />
 
         <!-- Favicon -->
-        <link rel="icon" type="image/png" href="images/round-sm.png" />
+        <link rel="icon" type="image/webp" href="images/round-sm.webp" />
 
         <!-- Стили -->
         <link rel="stylesheet" href="styles.css" /> 
@@ -30,12 +30,12 @@
             <div class="column">
 
                 <div class="tooltip" id="tooltip">
-                    <img src="./images/qr.png" alt="QR Code" />
+                    <img src="./images/qr.webp" alt="QR Code" />
                     <span class="qrText">@DOKOPATYCHBOT</span>
                 </div>
 
                 <div class="botCard">
-                    <img src="./images/round-sm.png" alt="Аватар" class="avatar" />
+                    <img src="./images/round-sm.webp" alt="Аватар" class="avatar" />
                     <span class="name">Докопатыч</span>
                     <span class="username">@DokopatychBot</span>
                     <span class="description"
