--- a/index.html
+++ b/index.html
@@ -21,8 +21,41 @@
 
         <!-- Стили -->
         <link rel="stylesheet" href="styles.css" /> 
- 
+        <script type="application/ld+json">
+            {
+              "@context": "http://schema.org/",
+              "@type": "Service",
+              "name": "Подбор фильмов и сериалов",
+              "provider": {
+                "@type": "Organization",
+                "name": "Dokopatych Bot",
+                "url": "https://dokopatych.github.io/movie-bot-start"
+              },
+              "areaServed": "RU",
+              "audience": {
+                "@type": "Audience",
+                "audienceType": "Киноманы"
+              },
+              "serviceType": "Фильмы и сериалы",
+              "offers": {
+                "@type": "Offer",
+                "price": "0",
+                "priceCurrency": "RUB"
+              }
+            }
+            </script>
     </head>
+    
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-C836R85Y76"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-C836R85Y76');
+</script>
+
 
     <body>
         <div class="backGround"></div>
@@ -59,7 +92,7 @@
                     </span>
                 </div>
             </div> 
-            <script src="script.js"></script>
         </div> 
+        <script src="script.js"></script>
     </body>
 </html>
