--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@
             }
             </script>
     </head>
-    
+
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-C836R85Y76"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YZ78JBVPPD"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-C836R85Y76');
+  gtag('config', 'G-YZ78JBVPPD');
 </script>
 
 
