--- a/index.html
+++ b/index.html
@@ -4,17 +4,14 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-        <title>Докопатыч</title>
-        <meta
-            name="description"
-            content="Бот для быстрого подбора фильмов и сериалов. In memory of Jeff Baena."
-        />
-
+        <title>Докопатыч. Какой сериал посмотреть</title>
+        <meta name="description" content="Телеграм бот для быстрого подбора фильмов и сериалов. In memory of Jeff Baena. Ты присылаешь мне фильм или сериал, а я собираю тебе несколько списков с чем-то, что может тебе тоже понравиться. Часто попадаются малоизвестные фильмы и сериалы, которые смотрели полтора человека на планете, но они хороши 🐻" />
+        
         <meta property="og:title" content="Докопатыч" />
-<meta property="og:description" content="Бот для быстрого подбора фильмов и сериалов. In memory of Jeff Baena." />
-<meta property="og:image" content="https://dokopatych.github.io/movie-bot-start/images/qr.webp" />
-<meta property="og:url" content="https://dokopatych.github.io/movie-bot-start" />
-<meta property="og:type" content="website" />
+        <meta property="og:description" content="Телеграм бот для быстрого подбора фильмов и сериалов. In memory of Jeff Baena. Ты присылаешь мне фильм или сериал, а я собираю тебе несколько списков с чем-то, что может тебе тоже понравиться. Часто попадаются малоизвестные фильмы и сериалы, которые смотрели полтора человека на планете, но они хороши 🐻" />
+        <meta property="og:image" content="https://dokopatych.github.io/movie-bot-start/images/round-sm.webp" />
+        <meta property="og:url" content="https://dokopatych.github.io/movie-bot-start/" />
+        <meta property="og:type" content="website" />
 
         <!-- Favicon -->
         <link rel="icon" type="image/webp" href="images/round-sm.webp" />
