--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
         
         <meta property="og:title" content="Докопатыч" />
         <meta property="og:description" content="Телеграм бот для быстрого подбора фильмов и сериалов. In memory of Jeff Baena. Ты присылаешь мне фильм или сериал, а я собираю тебе несколько списков с чем-то, что может тебе тоже понравиться. Часто попадаются малоизвестные фильмы и сериалы, которые смотрели полтора человека на планете, но они хороши 🐻" />
-        <meta property="og:image" content="https://dokopatych.github.io/movie-bot-start/images/round-sm.webp" />
+        <meta property="og:image" content="https://dokopatych.github.io/movie-bot-start/images/qr.webp" />
         <meta property="og:url" content="https://dokopatych.github.io/movie-bot-start/" />
         <meta property="og:type" content="website" />
 
         <!-- Favicon -->
-        <link rel="icon" type="image/webp" href="images/round-sm.webp" />
+        <link rel="icon" type="image/png" href="images/round-sm.png" />
+        <link rel="shortcut icon" href="images/round-sm.ico">
 
         <!-- Стили -->
         <link rel="stylesheet" href="styles.css" /> 
@@ -26,7 +27,7 @@
               "provider": {
                 "@type": "Organization",
                 "name": "Dokopatych Bot",
-                "url": "https://dokopatych.github.io/movie-bot-start"
+                "url": "https://dokopatych.github.io/movie-bot-start/"
               },
               "areaServed": "RU",
               "audience": {
