--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-        <title>Докопатыч. Какой сериал посмотреть</title>
+        <title>Докопатыч</title>
         <meta name="description" content="Телеграм бот для быстрого подбора фильмов и сериалов. In memory of Jeff Baena. Ты присылаешь мне фильм или сериал, а я собираю тебе несколько списков с чем-то, что может тебе тоже понравиться. Часто попадаются малоизвестные фильмы и сериалы, которые смотрели полтора человека на планете, но они хороши 🐻" />
-        
-        <meta property="og:title" content="Докопатыч" />
+
+        <meta name="application-name" content="Докопатыч. Какой сериал посмотреть" />
+        <meta property="og:title" content="Докопатыч. Какой сериал посмотреть" />
+        <meta property="og:site_name" content="Докопатыч" />
+
         <meta property="og:description" content="Телеграм бот для быстрого подбора фильмов и сериалов. In memory of Jeff Baena. Ты присылаешь мне фильм или сериал, а я собираю тебе несколько списков с чем-то, что может тебе тоже понравиться. Часто попадаются малоизвестные фильмы и сериалы, которые смотрели полтора человека на планете, но они хороши 🐻" />
+
         <meta property="og:image" content="https://dokopatych.github.io/movie-bot-start/images/qr.webp" />
         <meta property="og:url" content="https://dokopatych.github.io/movie-bot-start/" />
         <meta property="og:type" content="website" />
