--- a/index.html
+++ b/index.html
@@ -1,29 +1,32 @@
 <!doctype html>
 <html lang="ru">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-        <title>Докопатыч</title>
-        <meta name="description" content="Телеграм бот для быстрого подбора фильмов и сериалов. In memory of Jeff Baena. Ты присылаешь мне фильм или сериал, а я собираю тебе несколько списков с чем-то, что может тебе тоже понравиться. Часто попадаются малоизвестные фильмы и сериалы, которые смотрели полтора человека на планете, но они хороши 🐻" />
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-        <meta name="application-name" content="Докопатыч. Какой сериал посмотреть" />
-        <meta property="og:title" content="Докопатыч. Какой сериал посмотреть" />
-        <meta property="og:site_name" content="Докопатыч" />
+    <title>Докопатыч</title>
+    <meta name="description"
+        content="Телеграм бот для быстрого подбора фильмов и сериалов. In memory of Jeff Baena. Ты присылаешь мне фильм или сериал, а я собираю тебе несколько списков с чем-то, что может тебе тоже понравиться. Часто попадаются малоизвестные фильмы и сериалы, которые смотрели полтора человека на планете, но они хороши 🐻" />
 
-        <meta property="og:description" content="Телеграм бот для быстрого подбора фильмов и сериалов. In memory of Jeff Baena. Ты присылаешь мне фильм или сериал, а я собираю тебе несколько списков с чем-то, что может тебе тоже понравиться. Часто попадаются малоизвестные фильмы и сериалы, которые смотрели полтора человека на планете, но они хороши 🐻" />
+    <meta name="application-name" content="Докопатыч. Какой сериал посмотреть" />
+    <meta property="og:title" content="Докопатыч. Какой сериал посмотреть" />
+    <meta property="og:site_name" content="Докопатыч" />
 
-        <meta property="og:image" content="https://dokopatych.github.io/movie-bot-start/images/qr.webp" />
-        <meta property="og:url" content="https://dokopatych.github.io/movie-bot-start/" />
-        <meta property="og:type" content="website" />
+    <meta property="og:description"
+        content="Телеграм бот для быстрого подбора фильмов и сериалов. In memory of Jeff Baena. Ты присылаешь мне фильм или сериал, а я собираю тебе несколько списков с чем-то, что может тебе тоже понравиться. Часто попадаются малоизвестные фильмы и сериалы, которые смотрели полтора человека на планете, но они хороши 🐻" />
 
-        <!-- Favicon -->
-        <link rel="icon" type="image/png" href="images/round-sm.png" />
-        <link rel="shortcut icon" href="images/round-sm.ico">
+    <meta property="og:image" content="https://dokopatych.github.io/movie-bot-start/images/qr.webp" />
+    <meta property="og:url" content="https://dokopatych.github.io/movie-bot-start/" />
+    <meta property="og:type" content="website" />
 
-        <!-- Стили -->
-        <link rel="stylesheet" href="styles.css" /> 
-        <script type="application/ld+json">
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="images/round-sm.png" />
+    <link rel="shortcut icon" href="images/round-sm.ico">
+
+    <!-- Стили -->
+    <link rel="stylesheet" href="styles.css" />
+    <script type="application/ld+json">
             {
               "@context": "http://schema.org/",
               "@type": "Service",
@@ -47,54 +50,95 @@
             }
             </script>
 
-            <!-- Google tag (gtag.js) -->
-            <script async src="https://www.googletagmanager.com/gtag/js?id=G-YZ78JBVPPD"></script>
-            <script>
-              window.dataLayer = window.dataLayer || [];
-              function gtag(){dataLayer.push(arguments);}
-              gtag('js', new Date());
-            
-              gtag('config', 'G-YZ78JBVPPD');
-            </script>
-    </head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YZ78JBVPPD"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-YZ78JBVPPD');
+    </script>
+</head>
 
 
-    <body>
-        <div class="backGround"></div>
-        <div class="table">
-            <div class="column">
+<body>
+    <div class="backGround"></div>
+    <div class="table">
+        <div class="column">
 
-                <div class="tooltip" id="tooltip">
-                    <img src="./images/qr.webp" alt="QR Code" />
-                    <span class="qrText">@DOKOPATYCHBOT</span>
+            <div class="tooltip" id="tooltip">
+                <img src="./images/qr.webp" alt="QR Code" />
+                <span class="qrText">@DOKOPATYCHBOT</span>
+            </div>
+
+            <div class="botCard">
+                <img src="./images/round-sm.webp" alt="Аватар" class="avatar" />
+                <span class="name">Докопатыч</span>
+                <span class="username">@DokopatychBot</span>
+                <h1 class="description">Бот для быстрого подбора фильмов и сериалов <br /><br />
+                    In memory of Jeff Baena
+                </h1>
+
+                <div class="btns-container">
+                    <a href="https://web.telegram.org/k/#@DokopatychBot" class="start-btn" target="_blank">
+                        WEB
+                    </a>
+                    <a href="tg://resolve?domain=DokopatychBot" class="start-btn"> DESKTOP </a>
+                    <button class="start-btn" id="qrBtn">QR</button>
                 </div>
 
-                <div class="botCard">
-                    <img src="./images/round-sm.webp" alt="Аватар" class="avatar" />
-                    <span class="name">Докопатыч</span>
-                    <span class="username">@DokopatychBot</span>
-                    <span class="description"
-                        >Бот для быстрого подбора фильмов и сериалов <br /><br />
-                        In memory of Jeff Baena
-                    </span>
+            </div>
 
-                    <div class="btns-container">
-                        <a href="https://web.telegram.org/k/#@DokopatychBot" class="start-btn" target="_blank">
-                            WEB
-                        </a>
-                        <a href="tg://resolve?domain=DokopatychBot" class="start-btn"> DESKTOP </a>
-                        <button class="start-btn" id="qrBtn">QR</button>
-                    </div>
+            <div class="carousel">
+                <h2 class="carousel-text" style="transform: translateX(0%);opacity: 1">Ищешь, что посмотреть</h2>
+                <h2 class="carousel-text">Вспоминаешь, какой фильм или сериал стал для тебя родным</h2>
+                <h2 class="carousel-text">Присылаешь его мне</h2>
+                <h2 class="carousel-text">Прогоняю через алгоритм и подбираю тебе что-то ещё</h2>
+                <h2 class="carousel-text">Темы разные. Главное, чтобы вайб был "как тогда"</h2>
+                <h2 class="carousel-text">Выбирай по обложке, выбирай сердечком</h2>
+            </div>
 
+            <div class="faq">
+                <div class="faqCard">
+                    <h3>Я делаю проще откапывание фильмов и сериалов 🎬🪤🐻</h3>
+
+                    Ты присылаешь мне фильм или сериал, а я собираю тебе несколько списков с чем-то, что может тебе тоже
+                    понравиться. Часто попадаются малоизвестные фильмы и сериалы, которые смотрели полтора человека на
+                    планете, но они хороши.
                 </div>
 
-                <div class="carousel">
-                    <span id="carousel-text"
-                        >Ищешь, что посмотреть
-                    </span>
+                <div class="faqCard">
+                    <h3>Как я подбираю</h3>
+
+                    У меня мега хитрый алгоритм с использованием квантовых вычислений и секретных методик фбр. Картины
+                    могут быть не связаны темами или жанрами, здесь связь более глубокая. Рекомендации часто
+                    неожиданные. Если тебе интересны просто темы космоса или пиратов, то лучше обратиться к гуглу или
+                    gpt.
+
+                    Но если ты ищешь что-то, что вовлечёт тебя <b>✨как тогда✨</b>,то здесь ко мне🫡
                 </div>
-            </div> 
-        </div> 
-        <script src="script.js"></script>
-    </body>
+
+                <div class="faqCard">
+                    <h3>Как выбирать</h3>
+                    Рекомендую ориентироваться только на название и обложку, выбирай сердечком🫀
+                </div>
+
+                <div class="faqCard">
+                    <h3>Кто такой этот ваш Джефф Баена</h3>
+                    Это малоизвестный инди-сценарист и режиссёр, он упоминается в описании бота. Автору бота хотелось бы, чтобы такие как Джефф получали больше внимания при жизни, не смотря на низкую распиаренность.
+                </div>
+
+                <div class="faqCard">
+                    <h3>Откуда столько фильмов</h3>
+                    Источник сырых данных для алгоритма: TMDB. Он самый запаристый, самый наполненный и актуальный, есть
+                    вообще всё. Не стесняйся искать что угодно.
+                </div>
+            </div>
+
+        </div>
+    </div>
+    <script src="script.js"></script>
+</body>
+
 </html>
