--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Докопатыч</title>
+    <title>Докопатыч. Подбор фильмов и сериалов</title>
     <meta name="description"
-        content="Телеграм бот для быстрого подбора фильмов и сериалов. In memory of Jeff Baena. Ты присылаешь мне фильм или сериал, а я собираю тебе несколько списков с чем-то, что может тебе тоже понравиться. Часто попадаются малоизвестные фильмы и сериалы, которые смотрели полтора человека на планете, но они хороши 🐻" />
+        content="Телеграм бот для быстрого подбора фильмов и сериалов. Собираю тебе несколько списков с чем-то, что может тебе тоже понравиться. Часто попадаются малоизвестные фильмы и сериалы, которые смотрели полтора человека на планете, но они хороши 🐻" />
 
-    <meta name="application-name" content="Докопатыч. Какой сериал посмотреть" />
-    <meta property="og:title" content="Докопатыч. Какой сериал посмотреть" />
+    <meta name="application-name" content="Докопатыч" />
+    <meta property="og:title" content="Докопатыч" />
     <meta property="og:site_name" content="Докопатыч" />
 
     <meta property="og:description"
-        content="Телеграм бот для быстрого подбора фильмов и сериалов. In memory of Jeff Baena. Ты присылаешь мне фильм или сериал, а я собираю тебе несколько списков с чем-то, что может тебе тоже понравиться. Часто попадаются малоизвестные фильмы и сериалы, которые смотрели полтора человека на планете, но они хороши 🐻" />
+        content="Телеграм бот для быстрого подбора фильмов и сериалов. Собираю тебе несколько списков с чем-то, что может тебе тоже понравиться. Часто попадаются малоизвестные фильмы и сериалы, которые смотрели полтора человека на планете, но они хороши 🐻" />
 
-    <meta property="og:image" content="https://dokopatych.github.io/movie-bot-start/images/qr.webp" />
+    <meta property="og:image" content="https://dokopatych.github.io/movie-bot-start/images/square.webp" />
     <meta property="og:url" content="https://dokopatych.github.io/movie-bot-start/" />
     <meta property="og:type" content="website" />
 
@@ -33,10 +33,10 @@
               "name": "Подбор фильмов и сериалов",
               "provider": {
                 "@type": "Organization",
-                "name": "Dokopatych Bot",
+                "name": "Dokopatych",
                 "url": "https://dokopatych.github.io/movie-bot-start/"
               },
-              "areaServed": "RU",
+              "areaServed": { "@type": "Country", "name": "Russia" }
               "audience": {
                 "@type": "Audience",
                 "audienceType": "Киноманы"
@@ -44,7 +44,7 @@
               "serviceType": "Фильмы и сериалы",
               "offers": {
                 "@type": "Offer",
-                "price": "0",
+                "price": "Free",
                 "priceCurrency": "RUB"
               }
             }
@@ -68,7 +68,7 @@
         <div class="column">
 
             <div class="tooltip" id="tooltip">
-                <img src="./images/qr.webp" alt="QR Code" />
+                <img src="./images/qr.webp" alt="QR-код для Telegram бота Докопатыч" />
                 <span class="qrText">@DOKOPATYCHBOT</span>
             </div>
 
