--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
 
                 <div class="faqCard">
                     <h3>Кто такой этот ваш Джефф Баена</h3>
-                    Это малоизвестный инди-сценарист и режиссёр, он упоминается в описании бота. Автору бота хотелось бы, чтобы такие как Джефф получали больше внимания при жизни, не смотря на низкую распиаренность.
+                    Это малоизвестный инди-сценарист и режиссёр, он упоминается в описании бота. Автору бота хотелось
+                    бы, чтобы такие как Джефф получали больше внимания при жизни, не смотря на низкую распиаренность.
                 </div>
 
                 <div class="faqCard">
