--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="images/round-sm.png" />
-    <link rel="shortcut icon" href="images/round-sm.ico">
+    <link rel="shortcut icon" href="images/round-sm.ico" />
 
     <!-- Стили -->
     <link rel="stylesheet" href="styles.css" />
