--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="ru">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YZ78JBVPPD"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-YZ78JBVPPD');
+    </script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -36,7 +45,6 @@
                 "name": "Dokopatych",
                 "url": "https://dokopatych.github.io/movie-bot-start/"
               },
-              "areaServed": { "@type": "Country", "name": "Russia" }
               "audience": {
                 "@type": "Audience",
                 "audienceType": "Киноманы"
@@ -49,9 +57,7 @@
               }
             }
             </script>
-
 </head>
-
 
 <body>
     <div class="backGround"></div>
