--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
     <meta property="og:url" content="https://dokopatych.github.io/movie-bot-start/" />
     <meta property="og:type" content="website" />
 
+    <link rel="canonical" href="https://dokopatych.github.io/movie-bot-start/">
+
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="images/round-sm.png" />
     <link rel="shortcut icon" href="images/round-sm.ico" />
