--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 
     <!-- Стили -->
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <script type="application/ld+json">
             {
               "@context": "http://schema.org/",
@@ -63,82 +64,99 @@
 
 <body>
     <div class="backGround"></div>
-    <div class="table">
-        <div class="column">
 
-            <div class="tooltip" id="tooltip">
-                <img src="./images/qr.webp" alt="QR-код для Telegram бота Докопатыч" />
-                <span class="qrText">@DOKOPATYCHBOT</span>
+    <div class='column'>
+        <div class="tooltip" id="tooltip">
+            <img src="./images/qr.webp" alt="QR-код для Telegram бота Докопатыч" />
+            <span class="qrText">@DOKOPATYCHBOT</span>
+        </div>
+
+        <div class="botCard">
+            <img src="./images/round-sm.webp" alt="Аватар" class="avatar" />
+            <span class="name">Докопатыч</span>
+            <span class="username">@DokopatychBot</span>
+            <h1 class="description">Бот для быстрого подбора фильмов и сериалов <br /><br />
+                In memory of Jeff Baena
+            </h1>
+            <div class="btns-container">
+                <a href="https://web.telegram.org/k/#@DokopatychBot" class="start-btn" target="_blank">
+                    WEB
+                </a>
+                <a href="tg://resolve?domain=DokopatychBot" class="start-btn"> DESKTOP </a>
+                <button class="start-btn" id="qrBtn">QR</button>
+            </div>
+        </div>
+
+        <div class="swiper">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">Ищешь, что посмотреть</div>
+                <div class="swiper-slide">Вспоминаешь, какой фильм или сериал стал для тебя родным</div>
+                <div class="swiper-slide">Присылаешь его мне</div>
+                <div class="swiper-slide">Прогоняю через алгоритм и подбираю тебе что-то ещё</div>
+                <div class="swiper-slide">Темы разные. Главное, чтобы вайб был "как тогда"</div>
+                <div class="swiper-slide">Выбирай по обложке, выбирай сердечком</div>
+            </div>
+        </div>
+
+        <div class="faq">
+            <div class="faqCard">
+                <h3>Я делаю проще откапывание фильмов и сериалов 🎬🪤🐻</h3>
+
+                Ты присылаешь мне фильм или сериал, а я собираю тебе несколько списков с чем-то, что может тебе тоже
+                понравиться. Часто попадаются малоизвестные фильмы и сериалы, которые смотрели полтора человека на
+                планете, но они хороши.
             </div>
 
-            <div class="botCard">
-                <img src="./images/round-sm.webp" alt="Аватар" class="avatar" />
-                <span class="name">Докопатыч</span>
-                <span class="username">@DokopatychBot</span>
-                <h1 class="description">Бот для быстрого подбора фильмов и сериалов <br /><br />
-                    In memory of Jeff Baena
-                </h1>
+            <div class="faqCard">
+                <h3>Как я подбираю</h3>
 
-                <div class="btns-container">
-                    <a href="https://web.telegram.org/k/#@DokopatychBot" class="start-btn" target="_blank">
-                        WEB
-                    </a>
-                    <a href="tg://resolve?domain=DokopatychBot" class="start-btn"> DESKTOP </a>
-                    <button class="start-btn" id="qrBtn">QR</button>
-                </div>
+                У меня мега хитрый алгоритм с использованием квантовых вычислений и секретных методик фбр. Картины
+                могут быть не связаны темами или жанрами, здесь связь более глубокая. Рекомендации часто
+                неожиданные. Если тебе интересны просто темы космоса или пиратов, то лучше обратиться к гуглу или
+                gpt.
 
+                Но если ты ищешь что-то, что вовлечёт тебя <b>✨как тогда✨</b>,то здесь ко мне🫡
             </div>
 
-            <div class="carousel">
-                <h2 class="carousel-text" style="transform: translateX(0%);opacity: 1">Ищешь, что посмотреть</h2>
-                <h2 class="carousel-text">Вспоминаешь, какой фильм или сериал стал для тебя родным</h2>
-                <h2 class="carousel-text">Присылаешь его мне</h2>
-                <h2 class="carousel-text">Прогоняю через алгоритм и подбираю тебе что-то ещё</h2>
-                <h2 class="carousel-text">Темы разные. Главное, чтобы вайб был "как тогда"</h2>
-                <h2 class="carousel-text">Выбирай по обложке, выбирай сердечком</h2>
+            <div class="faqCard">
+                <h3>Как выбирать</h3>
+                Рекомендую ориентироваться только на название и обложку, выбирай сердечком🫀
             </div>
 
-            <div class="faq">
-                <div class="faqCard">
-                    <h3>Я делаю проще откапывание фильмов и сериалов 🎬🪤🐻</h3>
-
-                    Ты присылаешь мне фильм или сериал, а я собираю тебе несколько списков с чем-то, что может тебе тоже
-                    понравиться. Часто попадаются малоизвестные фильмы и сериалы, которые смотрели полтора человека на
-                    планете, но они хороши.
-                </div>
-
-                <div class="faqCard">
-                    <h3>Как я подбираю</h3>
-
-                    У меня мега хитрый алгоритм с использованием квантовых вычислений и секретных методик фбр. Картины
-                    могут быть не связаны темами или жанрами, здесь связь более глубокая. Рекомендации часто
-                    неожиданные. Если тебе интересны просто темы космоса или пиратов, то лучше обратиться к гуглу или
-                    gpt.
-
-                    Но если ты ищешь что-то, что вовлечёт тебя <b>✨как тогда✨</b>,то здесь ко мне🫡
-                </div>
-
-                <div class="faqCard">
-                    <h3>Как выбирать</h3>
-                    Рекомендую ориентироваться только на название и обложку, выбирай сердечком🫀
-                </div>
-
-                <div class="faqCard">
-                    <h3>Кто такой этот ваш Джефф Баена</h3>
-                    Это малоизвестный инди-сценарист и режиссёр, он упоминается в описании бота. Автору бота хотелось
-                    бы, чтобы такие как Джефф получали больше внимания при жизни, не смотря на низкую распиаренность.
-                </div>
-
-                <div class="faqCard">
-                    <h3>Откуда столько фильмов</h3>
-                    Источник сырых данных для алгоритма: TMDB. Он самый запаристый, самый наполненный и актуальный, есть
-                    вообще всё. Не стесняйся искать что угодно.
-                </div>
+            <div class="faqCard">
+                <h3>Кто такой этот ваш Джефф Баена</h3>
+                Это малоизвестный инди-сценарист и режиссёр, он упоминается в описании бота. Автору бота хотелось
+                бы, чтобы такие как Джефф получали больше внимания при жизни, не смотря на низкую распиаренность.
             </div>
 
+            <div class="faqCard">
+                <h3>Откуда столько фильмов</h3>
+                Источник сырых данных для алгоритма: TMDB. Он самый запаристый, самый наполненный и актуальный, есть
+                вообще всё. Не стесняйся искать что угодно.
+            </div>
         </div>
     </div>
     <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script>
+        new Swiper('.swiper', {
+            direction: 'horizontal',
+            slidesPerView: 1,
+            allowTouchMove: true,
+            grabCursor: true,
+            mousewheel: true,
+            loop: true,
+            keyboard: {
+                enabled: true,
+                onlyInViewport: false,
+            },
+            autoplay: {
+                delay: 2000, // Переключение каждые 2 секунды
+                disableOnInteraction: false, // Продолжать автопрокрутку после взаимодействия
+            },
+            pauseOnMouseEnter: true, 
+        });
+    </script>
 </body>
 
 </html>
