--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
         gtag('config', 'G-YZ78JBVPPD');
     </script>
+    <meta name="yandex-verification" content="24980ce091a40523" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
