--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <link rel="canonical" href="https://dokopatych.github.io/">
 
     <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="https://dokopatych.github.io/images/round-sm.ico" />
     <link rel="icon" type="image/png" href="images/round-sm.png" />
     <link rel="shortcut icon" href="images/round-sm.ico" />
 
