--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <meta name="description"
         content="Телеграм бот для быстрого подбора фильма наподобие вашего любимого фильма. Собираю тебе несколько списков с чем-то, что может тебе тоже понравиться. Часто попадаются малоизвестные фильмы и сериалы, которые смотрели полтора человека на планете, но они хороши 🐻" />
 
-    <meta name="application-name" content="Докопатыч" />
-    <meta property="og:title" content="Докопатыч" />
-    <meta property="og:site_name" content="Докопатыч" />
+    <meta name="application-name" content="Докопатыч | Фильмы наподобие вашего любимого фильма" />
+    <meta property="og:title" content="Докопатыч | Фильмы наподобие вашего любимого фильма" />
+    <meta property="og:site_name" content="Докопатыч | Фильмы наподобие вашего любимого фильма" />
 
     <meta property="og:description"
         content="Телеграм бот для быстрого подбора фильма наподобие вашего любимого фильма. Собираю тебе несколько списков с чем-то, что может тебе тоже понравиться. Часто попадаются малоизвестные фильмы и сериалы, которые смотрели полтора человека на планете, но они хороши 🐻" />
